objects/User.object
<CustomObject>
    <fields>
        <fullName>Login_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Login Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Photo_Url__c</fullName>
        <label>Photo Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <formula>Profile.Name</formula>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Initials__c</fullName>
        <label>Vehicle Initials</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>